--- a/Services/Basket/Basket.API/Properties/launchSettings.json
+++ b/Services/Basket/Basket.API/Properties/launchSettings.json
@@ -7,7 +7,8 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5252"
+      "launchUrl": "swagger",
+      "applicationUrl": "http://localhost:9001"
     },
     "IIS Express": {
       "commandName": "IISExpress",
