--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -8,6 +8,12 @@ services:
       - "27017:27017"
     volumes:
       - mongo_data:/data/db
+  
+  basketdb:
+     container_name: basketdb
+     restart: always
+     ports:
+      - "6379:6379"
 
   catalog.api:
     container_name: catalog.api
@@ -23,3 +29,12 @@ services:
       - catalogdb
     ports:
       - "9000:80"
+
+  basket.api:
+    container_name: basket.api
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - "CacheSettings__ConnectionString=basketdb:6379"
+    ports:
+      - "9001:80"
+
