--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,9 @@ version: '3.4'
 services:
   catalogdb:
     image: mongo:latest
+
+  basketdb:
+    image: redis:alpine
     
   catalog.api:
     image: ${DOCKER_REGISTRY-}catalogapi
@@ -11,5 +14,12 @@ services:
       dockerfile: Services/Catalog/Catalog.API/Dockerfile
 
 
+  basket.api:
+    image: ${DOCKER_REGISTRY-}basketapi
+    build:
+      context: .
+      dockerfile: Services/Basket/Basket.API/Dockerfile
+
 volumes:
   mongo_data:
+
