--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,9 @@ services:
 
   basketdb:
     image: redis:alpine
+
+  portainer:
+    image: portainer/portainer-ce:latest
     
   catalog.api:
     image: ${DOCKER_REGISTRY-}catalogapi
@@ -22,4 +25,5 @@ services:
 
 volumes:
   mongo_data:
+  portainer_data:
 
