--- a/Services/Discount/Discount.Infrastructure/Discount.Infrastructure.csproj
+++ b/Services/Discount/Discount.Infrastructure/Discount.Infrastructure.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Npgsql" Version="6.0.8" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Discount.Core\Discount.Core.csproj" />
+  </ItemGroup>
+
 </Project>
