fix done discount service

--- a/Services/Discount/Discount.API/appsettings.json
+++ b/Services/Discount/Discount.API/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "DatabaseSettings": {
+    "ConnectionString": "Server=localhost:5432;Port=5432;Database=DiscountDb;User Id=admin;password=admin1234;"
+  },
+  "Kestrel": {"EndpointDefaults": {"Protocols": "Http2"}},
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
