--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -14,7 +14,20 @@ services:
      restart: always
      ports:
       - "6379:6379"
-  
+ 
+  discountdb:
+     container_name: discountdb
+     environment:
+      - POSTGRES_USER=admin
+      - POSTGRES_PASSWORD=admin1234
+      - POSTGRES_DB=DiscountDb
+     restart: always
+     ports:
+      - "5432:5432"
+     volumes:
+      - postgres_data:/var/lib/postgresql/data/
+     
+
   portainer:
      container_name: portainer
      restart: always
@@ -47,4 +60,13 @@ services:
       - "CacheSettings__ConnectionString=basketdb:6379"
     ports:
       - "9001:80"
+
+  discount.api:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - "DatabaseSettings__ConnectionString=Server=discountdb;Port=5432;Database=DiscountDb;User Id=admin;Password=admin1234;"
+    depends_on:
+      - discountdb
+    ports:
+      - "9002:80"
 
