--- a/Services/Basket/Basket.API/appsettings.json
+++ b/Services/Basket/Basket.API/appsettings.json
@@ -2,6 +2,10 @@
   "CacheSettings": {
     "ConnectionString": "localhost:6379"
   },
+  "GrpcSettings": {
+    "DiscountUrl": "http://localhost:9002"
+  }
+
 
   "Logging": {
     "LogLevel": {
