--- a/Services/Ordering/Ordering.Application/Ordering.Application.csproj
+++ b/Services/Ordering/Ordering.Application/Ordering.Application.csproj
@@ -9,5 +9,16 @@
   <ItemGroup>
     <ProjectReference Include="..\Ordering.Core\Ordering.Core.csproj" />
   </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="AutoMapper" Version="12.0.1" />
+		<PackageReference Include="FluentValidation" Version="11.4.0" />
+		<PackageReference Include="MediatR" Version="11.1.0" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.4" />
+	</ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Behavior\" />
+    <Folder Include="Validators\" />
+  </ItemGroup>
 
 </Project>
