--- a/Services/Ordering/Ordering.API/appsettings.json
+++ b/Services/Ordering/Ordering.API/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionString": {
+    "OrderingConnectionString": "Server=localhost:Database=OrderDb;User Id=sa;Password=admin1234;"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
