--- a/Services/Basket/Basket.API/appsettings.json
+++ b/Services/Basket/Basket.API/appsettings.json
@@ -6,8 +6,8 @@
     "DiscountUrl": "http://localhost:9002"
   },
   "EventBusSettings": {
-    "HostAddress": "amqp://quest:quest@localhost:5672"
-  }
+    "HostAddress": "amqp://guest:guest@localhost:5672"
+  },
 
   "Logging": {
     "LogLevel": {
