--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,9 +42,16 @@ services:
       context: .
       dockerfile: Services/Ordering/Ordering.API/Dockerfile
 
+  ocelot.apigateway:
+    image: ${DOCKER_REGISTRY-}ocelotapigateway
+    build:
+      context: .
+      dockerfile: ApiGateways/Ocelot.ApiGateway/Dockerfile
+
 volumes:
   mongo_data:
   portainer_data:
   postgres_data:
+
 
 
