--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -113,3 +113,14 @@ services:
       - ordering.api
     ports:
       - "9010:80"
+
+  eshopping.identity:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=https://+:443;http://+:80
+    ports:
+      - "80"
+      - "443"
+    volumes:
+      - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
+      - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
