--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,6 +1,19 @@
 version: '3.4'
 
 services:
+ 
+  nginx:
+    container_name: nginx
+    restart: always
+    depends_on:
+      - identityserver
+      - catalog.api
+      - basket.api
+      - discount.api
+      - ordering.api
+    ports:
+      - "9200:9100"
+
   catalogdb:
     container_name: catalogdb
     restart: always
@@ -107,6 +120,7 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
     depends_on:
+      - identityserver
       - catalog.api
       - basket.api
       - discount.api
@@ -114,13 +128,9 @@ services:
     ports:
       - "9010:80"
 
-  eshopping.identity:
+  identityserver:
+    container_name: identityserver
     environment:
-      - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_URLS=https://+:443;http://+:80
+      - ASPNETCORE_URLS=http://+:9011
     ports:
-      - "80"
-      - "443"
-    volumes:
-      - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
-      - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
+      - "9011:9011"
