--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -12,7 +12,7 @@ services:
       - discount.api
       - ordering.api
     ports:
-      - "9200:9100"
+      - "44344:443"
 
   catalogdb:
     container_name: catalogdb
@@ -131,6 +131,7 @@ services:
   identityserver:
     container_name: identityserver
     environment:
+      - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://+:9011
     ports:
       - "9011:9011"
