--- a/ApiGateways/nginx/nginx.local.conf
+++ b/ApiGateways/nginx/nginx.local.conf
@@ -11,12 +11,12 @@ http {
         server identityserver:9011;
     }
     
-    server {        
-        listen 443 ssl;
-        ssl_certificate /etc/ssl/certs/id-local.eshopping.com.crt
-        ssl_certificate_key /etc/ssl/private/id-local.eshopping.com.key
+   server {        
+        listen 44344 ssl;
+        ssl_certificate /etc/ssl/certs/id-local.eshopping.com.crt;
+        ssl_certificate_key /etc/ssl/private/id-local.eshopping.com.key;
        
-        server_name id-local.eshopping.com;        
+        server_name $hostname;        
         
         location / {
             proxy_pass         http://identity;
