--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,11 +47,19 @@ services:
     build:
       context: .
       dockerfile: ApiGateways/Ocelot.ApiGateway/Dockerfile
+      
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.9.2
+
+  kibana:
+    image: docker.elastic.co/kibana/kibana:7.9.2
+  
 
 volumes:
   mongo_data:
   portainer_data:
   postgres_data:
+  elasticsearch-data: 
 
 
 
