--- a/Services/Discount/Discount.API/appsettings.json
+++ b/Services/Discount/Discount.API/appsettings.json
@@ -4,11 +4,8 @@
   },
   "Kestrel": {"EndpointDefaults": {"Protocols": "Http2"}},
 
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "ElasticConfiguration": {
+    "Uri": "http://localhost:9200"
   },
   "AllowedHosts": "*"
 }
